# botanica

./: BACKWARD_COMPATIBILITY_PLAN.md  BOTANICA_V0.2.0_PROFESSIONAL_FEATURES.md  CHANGELOG.md  COMPREHENSIVE_SPECIFICATION.md  Cargo.toml  README.md  tarpaulin-report.html
src/: conservation.rs  contextlite.rs  darwin_core.rs  error.rs  lib.rs
src/migrations/: runner.rs
src/queries/: search.rs  specimens.rs
src/tests/: comprehensive_tests.rs  mod.rs
